# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "checkpatch", "ddk_headers", "ddk_module")

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

# TODO(b/343869732): It's here to support the legacy kernel modules. Remove it
# once all dependent modules are switched to ddk modules.
filegroup(
    name = "headers",
    srcs = glob([
        "include/**/*.h",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/power/mitigation:__pkg__",
        "//private/google-modules/powervr:__pkg__",
    ],
)

filegroup(
    name = "perf.kconfig",
    srcs = glob([
        "**/Kconfig",
    ]) + [
        "//private/google-modules/perf/core/gs_domain_idle:Kconfig",
        "//private/google-modules/perf/core/gs_perf_mon:Kconfig",
        "//private/google-modules/perf/core/irm_devfreq:Kconfig",
        "//private/google-modules/perf/core/lat_govs:Kconfig",
        "//private/google-modules/perf/thermal:Kconfig",
    ],
    visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

_COMMON_COPTS = [
    "-Werror",
]

ddk_headers(
    name = "gs_perf_headers",
    hdrs = glob([
        "include/**/*.h",
    ]),
    includes = ["include"],
    visibility = [
        # keep sorted
        "//private/devices/google:__subpackages__",
        "//private/google-modules:__subpackages__",
    ],
)

ddk_module(
    name = "google_pm_qos",
    srcs = [
        "core/google_pm_qos/google_pm_qos.c",
    ],
    out = "google_pm_qos.ko",
    hdrs = [
        "include/perf/core/google_pm_qos.h",
    ],
    copts = _COMMON_COPTS,
    includes = [
        "include",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display/vsi-drm/verisilicon:__pkg__",
        "//private/google-modules/gxp:__subpackages__",
        "//private/google-modules/lwis:__subpackages__",
        "//private/google-modules/perf:__subpackages__",
        "//private/google-modules/power/mitigation:__pkg__",
        "//private/google-modules/soc/rdo:__pkg__",
        "//private/google-modules/video/cnm:__subpackages__",
    ],
    deps = [
        "//common:all_headers_aarch64",
    ],
)

ddk_module(
    name = "google_vote_manager",
    srcs = [
        "core/google_pm_qos/google_vote_manager.c",
    ],
    out = "google_vote_manager.ko",
    hdrs = [
        "include/perf/core/google_vote_manager.h",
    ],
    copts = _COMMON_COPTS,
    includes = [
        "include",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/perf:__subpackages__",
        "//private/google-modules/power/mitigation:__pkg__",
        "//private/google-modules/powervr:__pkg__",
        "//private/google-modules/soc/rdo:__pkg__",
    ],
    deps = [
        ":google_pm_qos",
        "//common:all_headers_aarch64",
    ],
)
