# SPDX-License-Identifier: GPL-2.0

load("//build/kernel/kleaf:kernel.bzl", "checkpatch", "ddk_headers", "kernel_module")

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

filegroup(
    name = "headers",
    srcs = glob([
        "include/**/*.h",
    ]),
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/powervr:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa:__pkg__",
        "//private/google-modules/video/cnm:__pkg__",
    ],
)

ddk_headers(
    name = "trusty_headers",
    hdrs = [
        ":headers",
    ],
    linux_includes = [
        "include",
    ],
    visibility = [
        "//private/google-modules/aoc:__subpackages__",
        "//private/google-modules/display/vsi-drm/dwc_dptx:__subpackages__",
        "//private/google-modules/hdcp/samsung:__subpackages__",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa:__subpackages__",
        "//private/google-modules/video/cnm:__subpackages__",
    ],
)

filegroup(
    name = "trusty.kconfig",
    srcs = [
        "drivers/trusty/Kconfig",
    ],
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
)

kernel_module(
    name = "trusty",
    srcs = glob([
        "drivers/trusty/*.c",
        "drivers/trusty/*.h",
        "drivers/trusty/*.S",
    ]) + [
        "Kbuild",
        "drivers/trusty/Kbuild",
        "//private/google-modules/soc/gs:gs_soc_headers",
        "//private/google-modules/trusty:headers",
    ],
    outs = [
        "trusty-core.ko",
        "trusty-ipc.ko",
        "trusty-log.ko",
        "trusty-test.ko",
        "trusty-virtio.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/display/vsi-drm/dwc_dptx:__pkg__",
        "//private/google-modules/hdcp/samsung:__pkg__",
        "//private/google-modules/powervr:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
        "//private/google-modules/soc/gs/drivers/soc/google/gsa:__pkg__",
        "//private/google-modules/video/cnm:__pkg__",
    ],
)
