# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "checkpatch")
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load("//private/devices/google/zuma:constants.bzl", "ZUMA_DTBS", "ZUMA_MODULE_OUTS")
load(":constants.bzl", "AKITA_DTBOS")

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

device_build(
    name = "akita",
    base_device = "//private/devices/google/zuma:zuma_base",
    build_configs = ["build.config.akita"],
    build_dtb = True,
    build_dtbo = True,
    build_system_dlkm = True,
    build_vendor_dlkm = True,
    build_vendor_kernel_boot = True,
    defconfig_fragments = ["akita_defconfig"],
    dtb_outs = ZUMA_DTBS,
    dtbo_outs = AKITA_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    ext_modules = [
        # keep sorted
        "//private/devices/google/akita/display:drm_panel.google",
        "//private/google-modules/amplifiers/cs35l41",
        "//private/google-modules/amplifiers/cs40l26",
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:snd-soc-wm-adsp",
        "//private/google-modules/amplifiers/tas256x",
        "//private/google-modules/bluetooth/broadcom:bluetooth.broadcom",
        "//private/google-modules/gps/broadcom/bcm47765",
        "//private/google-modules/nfc",
        "//private/google-modules/radio/samsung/s5300:cpif",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/touch/goodix",
        "//private/google-modules/wlan/bcmdhd/bcm4383:bcmdhd4383",
    ],
    insmod_cfgs = glob(["insmod_cfg/*.cfg"]),
    kconfig_exts = ["Kconfig.ext.akita"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/radio/samsung/s5300:cpif.kconfig",
        "//private/google-modules/touch/common:touch.common.kconfig",
    ],
    module_outs = ZUMA_MODULE_OUTS,
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.akita"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.akita"],
)

# For compatibility
alias(
    name = "zuma_akita_dist",
    actual = ":akita/dist",
)

alias(
    name = "zuma_akita_abi_update_symbol_list",
    actual = ":akita/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel",
    actual = ":akita/kernel",
)

alias(
    name = "kernel_abi_update_symbol_list",
    actual = ":akita/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel_compile_commands",
    actual = ":akita/kernel_compile_commands",
)
