# SPDX-License-Identifier: GPL-2.0-or-later

load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load("//private/devices/google/gs101:constants.bzl", "GS101_DTBS", "GS101_MODULE_OUTS")
load(":constants.bzl", "BLUEJAY_DTBOS")

package(
    default_visibility = [
        "//private/devices/google/gs101:__subpackages__",
    ],
)

device_build(
    name = "bluejay",
    base_device = "//private/devices/google/gs101:gs101_base",
    build_dtb = True,
    build_dtbo = True,
    build_vendor_dlkm = True,
    defconfig_fragments = ["bluejay_defconfig"],
    dtb_outs = GS101_DTBS,
    dtbo_outs = BLUEJAY_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    ext_modules = [
        # keep sorted
        "//private/devices/google/bluejay/display:drm_panel.google",
        "//private/google-modules/amplifiers/cs35l41",
        "//private/google-modules/amplifiers/cs40l26",
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:snd-soc-wm-adsp",
        "//private/google-modules/bluetooth/broadcom:bluetooth.broadcom",
        "//private/google-modules/gps/broadcom/bcm47765",
        "//private/google-modules/nfc",
        "//private/google-modules/radio/samsung/s5300:cpif.dit",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/touch/fts/ftm5_legacy:ftm5",
        "//private/google-modules/wlan/bcmdhd/bcm4389:bcmdhd4389",
    ],
    insmod_cfgs = glob(["insmod_cfg/*.cfg"]),
    kconfig_exts = ["Kconfig.ext.bluejay"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/radio/samsung/s5300:cpif.kconfig",
        "//private/google-modules/touch/common:touch.common.kconfig",
        "//private/google-modules/touch/fts/ftm5_legacy:ftm5.kconfig",
    ],
    module_outs = GS101_MODULE_OUTS,
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.bluejay"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.bluejay"],
)

# For compatibility
alias(
    name = "gs101_bluejay_dist",
    actual = ":bluejay/dist",
)

alias(
    name = "gs101_bluejay_abi_update_symbol_list",
    actual = ":bluejay/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel",
    actual = ":bluejay/kernel",
)

alias(
    name = "kernel_abi_update_symbol_list",
    actual = ":bluejay/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel_compile_commands",
    actual = ":bluejay/kernel_compile_commands",
)
