# SPDX-License-Identifier: GPL-2.0-or-later

load("@bazel_skylib//lib:paths.bzl", "paths")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@kernel_toolchain_info//:dict.bzl", "VARS")
load("//build/kernel/kleaf:hermetic_tools.bzl", "hermetic_genrule")
load("//build/kernel/kleaf:kernel.bzl", "checkpatch")
load("//private/devices/google/common:constants.bzl", "PIXEL_GKI_MODULES_LIST")
load("//private/devices/google/common/kleaf:extracted_system_dlkm.bzl", "extracted_system_dlkm")

package(
    default_visibility = [
        "//private/devices/google:__subpackages__",
    ],
)

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

label_flag(
    name = "kernel",
    build_setting_default = "//common:kernel_aarch64",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules:__subpackages__",
    ],
)

bool_flag(
    name = "use_prebuilt_fips140",
    build_setting_default = False,
)

config_setting(
    name = "use_prebuilt_fips140_is_true",
    flag_values = {":use_prebuilt_fips140": "1"},
)

_STRIP = "//prebuilts/clang/host/linux-x86/clang-{}:bin/llvm-strip".format(VARS["CLANG_VERSION"])

_FIPS140_KO = "//prebuilts/gki/kernel_aarch64_fips140:fips140.ko"

hermetic_genrule(
    name = "fips140",
    srcs = [_FIPS140_KO],
    outs = ["fips140.ko"],
    cmd = """
        $(location {strip}) --strip-debug -o $(location fips140.ko) \\
                $(location {fips140_ko})
    """.format(
        fips140_ko = _FIPS140_KO,
        strip = _STRIP,
    ),
    tools = [_STRIP],
)

bool_flag(
    name = "factory",
    build_setting_default = False,
)

config_setting(
    name = "factory_build",
    flag_values = {
        ":factory": "true",
    },
)

filegroup(
    name = "sepolicy",
    srcs = glob([
        "sepolicy/*",
    ]),
)

extracted_system_dlkm(
    name = "kernel_gki_modules",
    gki_modules = [paths.basename(m) for m in PIXEL_GKI_MODULES_LIST],
    images = "//common:kernel_aarch64_images",
)
