# SPDX-License-Identifier: GPL-2.0-only

load("//build/kernel/kleaf:kernel.bzl", "checkpatch")
load("//private/devices/google/common/kleaf:device_build.bzl", "device_build")
load("//private/devices/google/gs201:constants.bzl", "GS201_DTBS", "GS201_MODULE_OUTS")
load(":constants.bzl", "FELIX_DTBOS")

package(
    default_visibility = [
        "//private/devices/google/gs201:__subpackages__",
    ],
)

checkpatch(
    name = "checkpatch",
    checkpatch_pl = "//common:scripts/checkpatch.pl",
)

device_build(
    name = "felix",
    base_device = "//private/devices/google/gs201:gs201_base",
    build_dtb = True,
    build_dtbo = True,
    build_system_dlkm = True,
    build_vendor_dlkm = True,
    build_vendor_kernel_boot = True,
    defconfig_fragments = ["felix_defconfig"],
    dtb_outs = GS201_DTBS,
    dtbo_outs = FELIX_DTBOS,
    dts_makefile = "dts/Makefile",
    dts_srcs = glob(["dts/**"]) + [
        "//private/google-modules/soc/gs:gs.dt-bindings",
    ],
    ext_modules = [
        # keep sorted
        "//private/devices/google/felix/display:drm_panel.google",
        "//private/devices/google/felix/touch/fst2",
        "//private/devices/google/felix/touch/ftm5",
        "//private/google-modules/amplifiers/cs35l41",
        "//private/google-modules/amplifiers/cs40l26",
        "//private/google-modules/amplifiers/snd_soc_wm_adsp:snd-soc-wm-adsp",
        "//private/google-modules/bluetooth/broadcom:bluetooth.broadcom",
        "//private/google-modules/fingerprint/fpc",
        "//private/google-modules/gps/broadcom/bcm47765",
        "//private/google-modules/nfc",
        "//private/google-modules/radio/samsung/s5300:cpif",
        "//private/google-modules/sensors/hall_sensor",
        "//private/google-modules/touch/common:touch.common",
        "//private/google-modules/uwb/qorvo/dw3000/kernel:uwb.dw3000",
        "//private/google-modules/wlan/bcmdhd/bcm4389:bcmdhd4389",
    ],
    insmod_cfgs = glob(["insmod_cfg/*.cfg"]),
    kconfig_exts = ["Kconfig.ext.felix"],
    kconfigs = [
        # keep sorted
        "//private/google-modules/radio/samsung/s5300:cpif.kconfig",
        "//private/google-modules/touch/common:touch.common.kconfig",
    ],
    module_outs = GS201_MODULE_OUTS,
    vendor_dlkm_modules_blocklists = ["vendor_dlkm.blocklist.felix"],
    vendor_ramdisk_modules_lists = ["vendor_ramdisk.modules.felix"],
)

# For compatibility
alias(
    name = "gs201_felix_dist",
    actual = ":felix/dist",
)

alias(
    name = "gs201_felix_abi_update_symbol_list",
    actual = ":felix/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel",
    actual = ":felix/kernel",
)

alias(
    name = "kernel_abi_update_symbol_list",
    actual = ":felix/kernel_abi_update_symbol_list",
)

alias(
    name = "kernel_compile_commands",
    actual = ":felix/kernel_compile_commands",
)
